# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.952 2009-08-15 10:12:14 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

2.4.4 (2009/08/??)
 - (2009/08/14) Fixed bug#4150 - US/English Date Format not available.
 - (2009/08/13) Fixed bug#4092 - Junk tickets shown as New tickets in Dashboard.
 - (2009/08/13) Fixed bug#4129 - Watched Tickets in Dashboard.
 - (2009/08/13) Fixed bug#4072 - Inline images broken in reply with
    ArticleStorageFS as attachment backend.

2.4.3 (2009/08/12)
 - (2009/08/10) Fixed bug#4123 - Reinstall of OPM packages with incorrect
    framework or OS possible.
 - (2009/08/10) Fixed bug#4116 - Error when bouncing welcome ticket.
 - (2009/08/10) Fixed bug#3870 - OTRS utf-8 to iso-8859-1 conversion error
    messages on every incoming mail.
 - (2009/08/05) Fixed bug#4089 - root on OTRS Server gets an e-mail every 10
    minutes (Can't call method "FETCH" on an undefined value at ...Net/LDAP.pm
    line 274)
 - (2009/08/05) Fixed bug#4107 - OpenSearch URL incorrect in Customer
    Interface.
 - (2009/08/03) Improved ChallengeTokenCheck to check all token of own
    sessions (not only of current session).
 - (2009/08/01) Fixed bug#4086 - Kernel/System/Ticket.pm - next not in loop.
 - (2009/08/01) Fixed bug#2795 - Modification on SubjectRe (possible use of
    "" in Ticket::SubjectRe).
 - (2009/07/31) Fixed bug#4044 - WYSIWYG DefaultPreViewLines in ExpandMode.
 - (2009/07/30) Fixed bug#4082 - Queue customer notification moved to new
    event based notification feature, but it's still in admin interface and
    initial insert file.
 - (2009/07/30) Fixed bug#4081 - In Dashboard ticket overviews it is not
    possible to go to page 2,3,... and so on.