@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.952 2009-08-15 10:12:14 martin Exp $
+# $Id: CHANGES,v 1.953 2009-08-17 12:26:58 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,7 @@
 # --
 
 2.4.4 (2009/08/??)
+ - (2009/08/17) Fixed bug#4154 - Signature seperator is wrong.
  - (2009/08/14) Fixed bug#4150 - US/English Date Format not available.
  - (2009/08/13) Fixed bug#4092 - Junk tickets shown as New tickets in Dashboard.
  - (2009/08/13) Fixed bug#4129 - Watched Tickets in Dashboard.
